tests/baselines/reference/interfacesWithPredefinedTypesAsNames.errors.txt
==== tests/cases/compiler/interfacesWithPredefinedTypesAsNames.ts (6 errors) ====
    interface any { }
              ~~~
!!! error TS2000: Duplicate identifier 'any'.
    interface number { }
              ~~~~~~
!!! error TS2000: Duplicate identifier 'number'.
    interface string { }
              ~~~~~~
!!! error TS2000: Duplicate identifier 'string'.
    interface boolean { }
              ~~~~~~~
!!! error TS2000: Duplicate identifier 'boolean'.
    interface void {}
              ~~~~
!!! error TS1005: ';' expected.
    ~~~~~~~~~
!!! error TS2095: Could not find symbol 'interface'.